--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@ setInterval(function ()  {
             var today = new Date();
             var date = today.getFullYear() + '-' + (today.getMonth() + 1) + '-' + today.getDate();
             var time = today.getHours() + ":" + today.getMinutes() + ":" + today.getSeconds();
-            var dateTime = date + "    " + + time;
+            var dateTime = date + "  " + time;
 
             dtbox = document.getElementById('dtime');
             dtime.innerText = dateTime;
