--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                     <tr>
                         <td class="tg-0pky">Date &amp; Time</td>
                         <td class="tg-0pky">:</td>
-                        <td class="tg-0pky" id="dtime">12/12/2222<br>12:12:12 PM</td>
+                        <td class="tg-0pky" id="dtime"></td>
                     </tr>
                 </tbody>
             </table>
@@ -166,7 +166,7 @@
                     <tr>
                         <td class="tg-0pky">Shift</td>
                         <td class="tg-0pky">:</td>
-                        <td class="tg-0pky">Shift - 2 (Pick Ups)</td>
+                        <td class="tg-0pky">Shift - 2 (Pick Up)</td>
                     </tr>
                 </tbody>
             </table>
