--- a/index.html
+++ b/index.html
@@ -1,240 +1,263 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Bus Pass</title>
-    <link href="https://fonts.googleapis.com/css2?family=Cabin:wght@700&display=swap" rel="stylesheet">
-
+    <link
+      href="https://fonts.googleapis.com/css2?family=Cabin:wght@700&display=swap"
+      rel="stylesheet"
+    />
 
     <style>
-        html {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-        }
+      html {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+      }
 
+      .main {
+        position: relative;
+        height: 100vh;
+        width: 75vw;
+        border: 1px grey solid;
+        border-radius: 10px;
+        overflow: hidden;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        flex-direction: column;
+      }
+
+      .profile {
+        margin: 20px;
+        width: 125px;
+        height: 150px;
+        border: 1px grey solid;
+        border-radius: 10px;
+        overflow: hidden;
+      }
+
+      .profileimage {
+        height: 100%;
+        width: 100%;
+      }
+
+      .profile-container {
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
+
+      .namebox {
+        border-radius: 7px;
+        width: 95%;
+        height: 8%;
+        background-color: #00a9b4;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-size: 1.2rem;
+        font-family: "Cabin", sans-serif;
+        color: white;
+        text-transform: uppercase;
+      }
+
+      .tg {
+        text-align: left;
+        border-collapse: collapse;
+        border-spacing: 0;
+      }
+
+      .tg td {
+        border-style: none;
+        border-width: 1px;
+        font-family: "Cabin", sans-serif;
+        font-size: 20px;
+        overflow: hidden;
+        padding: 10px 5px;
+        word-break: normal;
+      }
+
+      .tg th {
+        border-color: black;
+        border-style: solid;
+        border-width: 1px;
+        font-family: "Cabin", sans-serif;
+        font-size: 14px;
+        font-weight: normal;
+        overflow: hidden;
+        padding: 10px 5px;
+        word-break: normal;
+      }
+
+      .table {
+        width: 90%;
+        display: flex;
+        align-items: center;
+        justify-content: flex-start;
+        margin: 20px 0px;
+      }
+
+      .tb {
+        text-align: center;
+        width: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        background-color: #00a9b4;
+      }
+      .bus {
+        width: 100%;
+        font-size: 1.5rem;
+        margin-bottom: 2em;
+        color: black;
+      }
+      .bus::after {
+        content: "";
+        width: 7%;
+        border: rgb(255, 127, 53) solid 2px;
+        border-radius: 1px;
+        position: absolute;
+        transform: translate(-75px, 30px);
+      }
+
+      @media only screen and (max-width: 912px) {
         .main {
-            position: relative;
-            height: 100vh;
-            width: 75vw;
-            border: 1px grey solid;
-            border-radius: 10px;
-            overflow: hidden;
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-            flex-direction: column;
-        }
+      
+        height: 70vh;
+        width: 90vw;
+      }
+      .profile {
+        width: 125px;
+        height: 150px;
+        border: 1px grey solid;
+        border-radius: 10px;
+        overflow: hidden;
+      }
 
-        .profile {
-            margin: 20px;
-            width: 125px;
-            height: 150px;
-            border: 1px grey solid;
-            border-radius: 10px;
-            overflow: hidden;
-        }
 
-        .profileimage {
-            height: 100%;
-            width: 100%;
-        }
 
-        .profile-container {
-            width: 100%;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
-
-        .namebox {
-            border-radius: 7px;
-            width: 95%;
-            height: 8%;
-            background-color: #00A9B4;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            font-size: 1.2rem;
-            font-family: 'Cabin', sans-serif;
-            color: white;
-            text-transform: uppercase;
-        }
-
-        .tg {
-            text-align: left;
-            border-collapse: collapse;
-            border-spacing: 0;
-        }
-
-        .tg td {
-            border-style: none;
-            border-width: 1px;
-            font-family: 'Cabin', sans-serif;
-            font-size: 20px;
-            overflow: hidden;
-            padding: 10px 5px;
-            word-break: normal;
-        }
-
-        .tg th {
-            border-color: black;
-            border-style: solid;
-            border-width: 1px;
-            font-family: 'Cabin', sans-serif;
-            font-size: 14px;
-            font-weight: normal;
-            overflow: hidden;
-            padding: 10px 5px;
-            word-break: normal;
-        }
-
-        .table {
-            width: 90%;
-            display: flex;
-            align-items: center;
-            justify-content: flex-start;
-            margin: 20px 0px
-        }
-
-        .tb {
-
-            text-align: center;
-            width: 100%;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            background-color: #00A9B4;
-        }
-        .bus{
-            width: 100%;
-            font-size: 1.5rem;
-            margin-bottom: 2em;
-            color: black;
-        }
-        .bus::after{
-            content: '';
-            width: 7%;
-            border: rgb(255, 127, 53) solid 2px;
-            border-radius: 1px;
-            position: absolute;
-            transform: translate(-75px , 30px);
-        }
-
-        
+      }
     </style>
-</head>
+  </head>
 
-<body>
-    <div class="bus">
-        Bus Pass
-    </div>
+  <body>
+    <div class="bus">Bus Pass</div>
 
     <div class="main">
-        <div class="profile-container">
-            <div class="profile">
-                <img class="profileimage" src="ProfilePicture.jpeg" alt="profile">
-            </div>
+      <div class="profile-container">
+        <div class="profile">
+          <img class="profileimage" src="ProfilePicture.jpeg" alt="profile" />
         </div>
+      </div>
 
+      <div class="namebox">PrathamKumar R. Pandya</div>
 
-        <div class="namebox">PrathamKumar R. Pandya</div>
+      <div class="table">
+        <table class="tg">
+          <tbody>
+            <tr>
+              <td class="tg-0pky">GR No.</td>
+              <td class="tg-0pky">:</td>
+              <td class="tg-0pky">110176</td>
+            </tr>
+            <tr>
+              <td class="tg-0pky">Stream</td>
+              <td class="tg-0pky">:</td>
+              <td class="tg-0pky">ICT-FOT1 (MU)</td>
+            </tr>
+            <tr>
+              <td class="tg-0pky">Sem</td>
+              <td class="tg-0pky">:</td>
+              <td class="tg-0pky">SEM-4,SEM-3</td>
+            </tr>
+            <tr>
+              <td class="tg-0pky">Mobile No.</td>
+              <td class="tg-0pky">:</td>
+              <td class="tg-0pky">6352757912</td>
+            </tr>
+            <tr>
+              <td class="tg-0pky">Pick-up</td>
+              <td class="tg-0pky">:</td>
+              <td class="tg-0pky">Morbi - Swagat Hall</td>
+            </tr>
+            <tr>
+              <td class="tg-0pky">Date &amp; Time</td>
+              <td class="tg-0pky">:</td>
+              <td class="tg-0pky" onload="showTime()" id="dtime">
+                31/12/2022 <br />
+                11:59:59 AM
+              </td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
 
-        <div class="table">
-            <table class="tg">
-                <tbody>
-                    <tr>
-                        <td class="tg-0pky">GR No.</td>
-                        <td class="tg-0pky">:</td>
-                        <td class="tg-0pky">110176</td>
-                    </tr>
-                    <tr>
-                        <td class="tg-0pky">Stream</td>
-                        <td class="tg-0pky">:</td>
-                        <td class="tg-0pky">ICT-FOT1 (MU)</td>
-                    </tr>
-                    <tr>
-                        <td class="tg-0pky">Sem</td>
-                        <td class="tg-0pky">:</td>
-                        <td class="tg-0pky">SEM-4,SEM-3</td>
-                    </tr>
-                    <tr>
-                        <td class="tg-0pky">Mobile No.</td>
-                        <td class="tg-0pky">:</td>
-                        <td class="tg-0pky">6352757912</td>
-                    </tr>
-                    <tr>
-                        <td class="tg-0pky">Pick-up</td>
-                        <td class="tg-0pky">:</td>
-                        <td class="tg-0pky">Morbi - Swagat Hall</td>
-                    </tr>
-                    <tr>
-                        <td class="tg-0pky">Date &amp; Time</td>
-                        <td class="tg-0pky">:</td>
-                        <td class="tg-0pky" onload= "showTime()" id="dtime">31/12/2022 <br> 11:59:59 AM</td>
-                    </tr>
-                </tbody>
-            </table>
-        </div>
-
-        <div class="tb">
-            <table class="tg">
-                <tbody>
-                    <tr>
-                        <td class="tg-0pky">Shift</td>
-                        <td class="tg-0pky">:</td>
-                        <td class="tg-0pky">Shift - 2 (Pick Up)</td>
-                    </tr>
-                </tbody>
-            </table>
-        </div>
+      <div class="tb">
+        <table class="tg">
+          <tbody>
+            <tr>
+              <td class="tg-0pky">Shift</td>
+              <td class="tg-0pky">:</td>
+              <td class="tg-0pky">Shift - 2 (Pick Up)</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
     </div>
     <script>
-    window.onload = () => {
+      window.onload = () => {
+        function showTime() {
+          let date = new Date();
+          let hour = date.getHours();
+          let minutes = date.getMinutes();
+          let seconds = date.getSeconds();
+          let dates = date.getDate();
+          let month = date.getMonth();
+          let year = date.getFullYear();
+          let session = "AM";
 
-    function showTime() {
-        let date = new Date();
-        let hour = date.getHours(); 
-        let minutes = date.getMinutes(); 
-        let seconds = date.getSeconds(); 
-        let dates = date.getDate();
-        let month = date.getMonth();
-        let year = date.getFullYear();
-        let session = 'AM';
-
-        if (hour === 0) {
+          if (hour === 0) {
             hour = 12;
-        }
+          }
 
-        if (hour > 12) {
+          if (hour > 12) {
             hour = hour - 12;
-            session = 'PM';
+            session = "PM";
+          }
+          if (month < 10) {
+            month = "0" + month;
+          }
+
+          hour = hour < 10 ? "0" + hour : hour;
+          minutes = minutes < 10 ? "0" + minutes : minutes;
+          seconds = seconds < 10 ? "0" + seconds : seconds;
+
+          let time =
+            dates +
+            "/" +
+            month +
+            "/" +
+            year +
+            "<br>" +
+            hour +
+            ":" +
+            minutes +
+            ":" +
+            seconds +
+            " " +
+            session;
+
+          document.querySelector("#dtime").innerHTML = time;
+
+          setTimeout(showTime, 1000);
         }
-        if (month<10){
-            month = "0"+month;
-        }
 
-        hour = (hour < 10) ? '0' + hour : hour;
-        minutes = (minutes < 10) ? '0' + minutes : minutes;
-        seconds = (seconds < 10) ? '0' + seconds : seconds;
-
-        let time = dates +"/" + month + "/" + year +"<br>" + hour + ':' + minutes + ':' + seconds + ' ' + session;
-
-        document.querySelector('#dtime').innerHTML = time;
-
-
-        setTimeout(showTime, 1000);
-    }
-
-    showTime();
-
-}
-
-
+        showTime();
+      };
     </script>
-</body>
-
+  </body>
 </html>
